test/success/simple-tree.dsk
struct Node
    left: ?Node
    right: ?Node
    value: int

    func add(mut self: @, left: ?Node, right: ?Node) -> void
        self.left = left
        self.right = right
    end
end

let mut root = Node(value = 50, left = null, right = null)

let left_node = @(value = 0, left = null, right = null)

root.add(
    left = @(value = 0, left = null, right = null),
    right = @(value = 100, left = null, right = null)
)

func print_node(node: Node) -> void
    echo(node.value)
end

print_node(root)
print_node(left_node)
print_node(@(value = 888, left = null, right = null))

